# coin-narrative-catcher

./: .env.example  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SKILL.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: data-sources.md
references/: agentic-commerce-framework.md  launchpad-attribution.md  output-template.md  signal-framework.md
scripts/: analyze_narrative.py  check_launchpads.py  credibility_graph.py
tests/: test_check_launchpads.py
